welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:36: error: expected class or object definition
def move(nbPas : Int, versLAvant : Boolean) {
^Array1:46: error: Unmatched closing brace '}' ignored here
}
^